fix: <Catalog/>, <Preview/> position fixed bug on Safari

--- a/amiq/css/style.css
+++ b/amiq/css/style.css
@@ -51,7 +51,7 @@ hr {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 90;
+    z-index: 8;
     background-color: #fff;
     color: #868e96;
     -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, .15);
@@ -125,7 +125,7 @@ hr {
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 9999;
+    z-index: 9;
 }
 
 .list-type-menu a {
@@ -888,13 +888,17 @@ hr {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 5;
+    z-index: 11;
     width: 110%;
     padding: 0;
-    height: 2.4rem;
+    height: 3em;
+    line-height: 3em;
     background-color: #f1e8d6;
     overflow: hidden;
     text-overflow: ellipsis;
+}
+.book-info.fixed .id {
+    padding: 1em 1.35em;
 }
 
 .book-info.fixed .en {
@@ -917,8 +921,7 @@ hr {
     /*	position: absolute;
 	left: 70px;*/
     display: inline-block;
-    margin-left: 70px;
-    padding: .5em 0;
+    padding-left: 1em;
     font-size: .8125rem;
     color: #333;
     /*	-webkit-animation: 4s fadeInOut infinite;
@@ -955,7 +958,7 @@ hr {
 
 .preview {
     position: fixed;
-    z-index: 9999;
+    z-index: 10;
     top: 0;
     bottom: 0;
     left: 0;
@@ -1632,6 +1635,7 @@ hr {
     bottom: -3px;
     left: 0;
     right: 0;
+    z-index: 11;
     text-align: center;
     background-color: #f1e8d6;
 /*    -webkit-transform: translate3d(0, 0, 0);
@@ -1659,10 +1663,10 @@ hr {
 .closePreview {
     display: inline-block;
     position: fixed;
-    top: 0;
+    top: 10px;
     right: 0;
-    z-index: 10;
-    padding: 1em 2em;
+    z-index: 11;
+    padding: .7em 2em;
     color: #8c8174;
     cursor: pointer;
 }
